cluster/homelab/apps/diagrams/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: diagrams
    namespace: diagrams
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Make diagrams in your browser
        gethomepage.dev/group: Knowledge Base And Tasks
        gethomepage.dev/icon: draw
        gethomepage.dev/name: Diagrams
